RESOLVED FIXED124324
[CSS Shapes] Empty polygons with non-zero shape-padding cause an ASSERT crash
https://bugs.webkit.org/show_bug.cgi?id=124324
Summary [CSS Shapes] Empty polygons with non-zero shape-padding cause an ASSERT crash
Hans Muller
Reported 2013-11-13 17:32:38 PST
Created attachment 216881 [details] Test case Polygon shape-inside values with less than three vertices and non-zero shape-padding cause an ASSERT crash. The same is true for shape-outside polygons and shape-margin.
Attachments
Test case (219 bytes, text/html)
2013-11-13 17:32 PST, Hans Muller
no flags
Patch (5.93 KB, patch)
2013-11-13 19:52 PST, Hans Muller
no flags
Hans Muller
Comment 1 2013-11-13 19:52:13 PST
Created attachment 216891 [details] Patch PolygonShape::shapePaddingBounds() and PolygonShape::shapeMarginBounds() no longer attempt to compute a new FloatPolygon when the original is empty, i.e. when it has less than three vertices.
Andreas Kling
Comment 2 2013-11-14 09:39:10 PST
Comment on attachment 216891 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-11-14 10:19:18 PST
Comment on attachment 216891 [details] Patch Clearing flags on attachment: 216891 Committed r159291: <http://trac.webkit.org/changeset/159291>
WebKit Commit Bot
Comment 4 2013-11-14 10:19:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.