Source/WebCore/rendering/shapes/PolygonShape.cpp
@@ -181,7 +181,7 @@ static inline PassOwnPtr<FloatPolygon> computeShapeMarginBounds(const FloatPolyg
 const FloatPolygon& PolygonShape::shapePaddingBounds() const
 {
     ASSERT(shapePadding() >= 0);
-    if (!shapePadding())
+    if (!shapePadding() || m_polygon.isEmpty())
         return m_polygon;
 
     if (!m_paddingBounds)
@@ -193,7 +193,7 @@ const FloatPolygon& PolygonShape::shapePaddingBounds() const
 const FloatPolygon& PolygonShape::shapeMarginBounds() const
 {
     ASSERT(shapeMargin() >= 0);
-    if (!shapeMargin())
+    if (!shapeMargin() || m_polygon.isEmpty())
         return m_polygon;
 
     if (!m_marginBounds)
